FIX collapse Banner and Productos destacados, Home +2700px

--- a/css/menuIncom.css
+++ b/css/menuIncom.css
@@ -157,7 +157,7 @@
     }
 }
 
-@media only screen and (min-width: 3000px) {
+@media only screen and (min-width: 2700px) {
 
     .menu-incom-contenedor {
         width: 860px;
